--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -11,8 +11,8 @@
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+        <li ng-repeat="item in menu" ng-class="{active: isActive(item.state)}">
+            <a ng-click="changeState( item.state )">{{item.title}}</a>
         </li>
       </ul>
     </div>
