some build fixes from the merges

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,5 +19,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import 'main/main.scss';
 @import 'champion-select/champion-select.scss';
+@import 'champion-stats/champion-stats.scss';
 @import 'modal/modal.scss';
+@import 'team-select/team-select.scss';
 // endinjector
