--- a/client/components/champion-select/champion-select.scss
+++ b/client/components/champion-select/champion-select.scss
@@ -1,7 +1,8 @@
 .champion-select {
-  height: 300px;
+  height: 360px;
   overflow-y: auto;
   width: 150px;
+  margin-left: 8px;
   .champion-item {
     a {
       cursor: pointer;
