--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -22,4 +22,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'champion-stats/champion-stats.scss';
 @import 'modal/modal.scss';
 @import 'team-select/team-select.scss';
+@import 'team-stats/team-stats.scss';
 // endinjector
