improvements to champ search

--- a/client/components/team-select/team-select.tmpl.html
+++ b/client/components/team-select/team-select.tmpl.html
@@ -1,25 +1,24 @@
 <div class="team-select">
   <div class="team-select-left">
-    <input type="text" ng-model="ctrl.leftFilter" style="width:150px;"/>
-    <div class="team-select-left-container">
-      <div ng-repeat="champ in ctrl.champions | filter : ctrl.leftFilter | orderBy: 'name'"
-           data-drag="{{champ.id}}" data-jqyoui-options="{appendTo: 'body',containment: 'window',scroll: false,helper: 'clone'}"
-           jqyoui-draggable="{animate:true, onStop: 'onDropCallback'}" ng-model="ctrl.champions"
-           ng-click="ctrl.addHilightedChamp( champ.id )" ng-class="ctrl.selectedClass( champ.id )">
+    <input type="text" ng-model="ctrl.leftFilter" style="width:150px;" ng-keypress="ctrl.submitChamp($event)" placeholder="Search Champion"/>
+    <div class="team-select-left-container" ng-hide="!ctrl.leftFilter">
+      <div style="cursor:pointer" ng-repeat="champ in ctrl.champions | filter : ctrl.leftFilter | orderBy: 'name'"
+        ng-click="ctrl.addChamp( champ.id )" >
         {{champ.name}}
       </div>
     </div>
 
   </div>
   <div class="team-select-middle">
-    <input type="button" value=">" ng-click="ctrl.moveChampsRight()" />
-    <input type="button" value="<" ng-click="ctrl.moveChampsLeft()" />
+
   </div>
   <div class="team-select-right">
     <div class="team-select-right-container"  jqyoui-droppable="{ onDrop: 'onDropCallback'}" data-drop="true" ng-model="ctrl.selectedChampions">
-      <div ng-repeat="champ in ctrl.selectedChampions"
+      <div style="height:20px;" ng-repeat="champ in ctrl.selectedChampions"
            ng-click="ctrl.addHilightedChamp( champ.id )" ng-class="ctrl.selectedClass( champ.id )">
            {{champ.name}}
+        <input type="button" style="padding-top:0px;color:red;height:20px; float:right;" value="x"
+          ng-click="ctrl.removeChamp( champ.id )" />
        </div>
     </div>
   </div>
