--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a style="cursor:pointer;" ng-click="changeState( 'main' )" class="navbar-brand">urf</a>
+      <a style="cursor:pointer;" ng-click="changeState( 'main.team' )" class="navbar-brand">Omega Deathball</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
