--- a/client/components/team-select/team-select.tmpl.html
+++ b/client/components/team-select/team-select.tmpl.html
@@ -1,6 +1,6 @@
 <div class="team-select">
   <div class="team-select-left">
-    <input type="text" ng-model="ctrl.leftFilter" style="width:150px;" ng-keypress="ctrl.submitChamp($event)" placeholder="Search Champion"/>
+    <input class="form-control" type="text" ng-model="ctrl.leftFilter" style="width:150px;" ng-keypress="ctrl.submitChamp($event)" placeholder="Search Champion"/>
     <div class="team-select-left-container" ng-hide="!ctrl.leftFilter">
       <div style="cursor:pointer" ng-repeat="champ in ctrl.champions | filter : ctrl.leftFilter | orderBy: 'name'"
         ng-click="ctrl.addChamp( champ.id )" >
@@ -14,10 +14,10 @@
   </div>
   <div class="team-select-right">
     <div class="team-select-right-container"  jqyoui-droppable="{ onDrop: 'onDropCallback'}" data-drop="true" ng-model="ctrl.selectedChampions">
-      <div style="height:20px;" ng-repeat="champ in ctrl.selectedChampions"
+      <div  ng-repeat="champ in ctrl.selectedChampions"
            ng-click="ctrl.addHilightedChamp( champ.id )" ng-class="ctrl.selectedClass( champ.id )">
-           {{champ.name}}
-        <input type="button" style="padding-top:0px;color:red;height:20px; float:right;" value="x"
+
+        <input type="button" class="closer" value="x: {{champ.name}}"
           ng-click="ctrl.removeChamp( champ.id )" />
        </div>
     </div>
