--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -13,6 +13,10 @@
     letter-spacing: -1px;
 }
 
+.ui-container{
+  min-height: 400px;
+}
+
 .hero-unit {
     position: relative;
     padding: 30px 15px;
