--- a/client/components/team-stats/team-stats.tmpl.html
+++ b/client/components/team-stats/team-stats.tmpl.html
@@ -1,3 +1,3 @@
 <div>
-  <div ng-if="!ctrl.teamData.nodes">Loading Data...</div>
+  <div class="loader" ng-if="!ctrl.teamData.nodes">Loading Data... or Not.</div>
 </div>
